k8s/tekton-demo.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-demo
  namespace: tekton-pipelines
  labels:
    app: tekton-demo
    ver: v1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tekton-demo
    ver: v1
